2007-03-08  Brian Bidulock  <bidulock@openss7.org>

	* src/util/init/strtty.sh: ubuntu looks for lsb info in init scripts

2007-03-07  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am (modutil_DATA): should not be distributed
	* tests/atlocal.in: tool substitutions changed
	* src/drivers/Config.in: clone device by name instead of number

2007-03-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/Makefile.am: attempt proper texinfo dependencies

2007-03-05  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: correct version numbers
	* strtty.spec.in: do not release source package

2007-03-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* debian/copyright: updates for release
	* doc/manual/news.texi: updates for release

	* strtty.spec.in: do not propagate empty flags
	* debian/rules.in: do not propagate empty flags

2007-03-02  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: improvements to common build environment
	* doc/manual/news.texi: updates for release

2007-02-28  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/descrip.texi: updates and corrections
	* doc/manual/news.texi: updates and corrections
	* doc/manual/releases.texi: updates and corrections
	* doc/manual/strtty.texi: updates and corrections
	* doc/manual/tree.texi: updates and corrections

2007-02-26  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/releases.texi: correct streams version

2007-02-12  Brian Bidulock  <bidulock@openss7.org>

	* strtty.spec.in: support for autoconf 2.61
	* configure.a: support for autoconf 2.61c
	* .cvsignore: support for autoconf 2.61
	* debian/mscript_header.in: support for autoconf 2.61
	* debian/rules.in: support for autoconf 2.61
	* doc/manual/news.texi: support for autoconf 2.61
	* doc/manual/texi/install.texi: support for autoconf 2.61