@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo tw=100 nocin nosi
 @c =========================================================================
 @c
-@c @(#) $Id: bugs.texi,v 0.9.2.1 2006/08/27 12:02:52 brian Exp $
+@c @(#) $Id: bugs.texi,v 0.9.2.2 2007/03/09 22:34:38 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -53,12 +53,19 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2006/08/27 12:02:52 $ by $Author: brian $
+@c Last Modified $Date: 2007/03/09 22:34:38 $ by $Author: brian $
 @c
 @c =========================================================================
 
 @table @code
-@item (no items)
+@item 001.  2007-03-09T15:31:23-0700
+
+The package was installing /dev/ptmx and /dev/pts/n device and removing them when uninstalling.
+This caused havoc with Linux's UNIX'95 pseudo-terminal devices.  They have been strapped out
+until later.
+
+@emph{*fixed*} in @command{strtty-0.9.2.2}
+
 @end table
 
 
